--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,9 @@
 
     <artifactId>ranorex-integration</artifactId>
     <packaging>hpi</packaging>
-     <version>0.0.1-SNAPSHOT</version>
-     <name>Ranorex Test Execution Plugin</name>
-    <description>This plugin provides an easy way to run a Ranorex Test Suite in your Jenkins Job as a build step.
-        The simple usage allows the user to run a Ranorex Test without any additional settings whereby the advanced usage allows you to add several parameters.</description>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Ranorex Test Execution Plugin</name>
+    <description>This plugin provides an easy way to run a Ranorex test suite as a build step in your Jenkins job. You can run a test suite as is without any need for configuration, or you can make several different advanced settings.</description>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Ranorex+Integration+Plugin</url>
     
     <licenses>
