--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
@@ -10,9 +12,12 @@
     <packaging>hpi</packaging>
     <version>0.2.1-SNAPSHOT</version>
     <name>Ranorex Test Execution Plugin</name>
-    <description>This plugin provides an easy way to run a Ranorex test suite as a build step in your Jenkins job. You can run a test suite as is without any need for configuration, or you can make several different advanced settings.</description>
+    <description>This plugin provides an easy way to run a Ranorex test suite as a build step in your Jenkins job. You
+        can run a test suite as is without any need for configuration, or you can make several different advanced
+        settings.
+    </description>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Ranorex+Integration+Plugin</url>
-    
+
     <licenses>
         <license>
             <name>MIT license</name>
@@ -20,7 +25,7 @@
             <comments>All source code is under the MIT license.</comments>
         </license>
     </licenses>
-    
+
     <developers>
         <developer>
             <id>mstoegerer</id>
@@ -28,21 +33,21 @@
             <email>markus.stoegerer@gmail.com</email>
         </developer>
     </developers>
-    
+
     <scm>
         <connection>scm:git:ssh://github.com/jenkinsci/ranorex-integration-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/ranorex-integration-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/ranorex-integration-plugin.git</url>
-    <tag>HEAD</tag>
-  </scm>
-    
+        <tag>HEAD</tag>
+    </scm>
+
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
             <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
-    
+
     <pluginRepositories>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
@@ -73,6 +78,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
             <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
