--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,17 @@
 
     <artifactId>ranorex-integration</artifactId>
     <packaging>hpi</packaging>
-    <version>0.3.0</version>
+    <version>0.3.0-SNAPSHOT</version>
     <name>Ranorex Test Execution Plugin</name>
     <description>This plugin provides an easy way to run a Ranorex test suite as a build step in your Jenkins job. You
         can run a test suite as is without any need for configuration, or you can make several different advanced
         settings.
     </description>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Ranorex+Integration+Plugin</url>
+    <organization>
+    	<name>Ranorex</name>
+    	<url>https://www.ranorex.com</url>
+    </organization>
 
     <licenses>
         <license>
@@ -30,7 +34,6 @@
         <developer>
             <id>mstoegerer</id>
             <name>Markus Stoegerer</name>
-            <email>markus.stoegerer@gmail.com</email>
         </developer>
         <developer>
             <id>dlujic</id>
