--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <artifactId>ranorex-integration</artifactId>
     <packaging>hpi</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Ranorex Test Execution Plugin</name>
     <description>This plugin provides an easy way to run a Ranorex test suite as a build step in your Jenkins job. You
         can run a test suite as is without any need for configuration, or you can make several different advanced
@@ -49,7 +49,7 @@
         <connection>scm:git:ssh://github.com/jenkinsci/ranorex-integration-plugin.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/ranorex-integration-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/ranorex-integration-plugin.git</url>
-        <tag>HEAD</tag>
+        <tag>ranorex-integration-1.0.0</tag>
     </scm>
 
     <repositories>
